# video-analysis-thesis

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  googlevision.py  main.py  ocr.py  pyproject.toml  requirements.txt  sario.py
model_trainer/: keras_ocr_digit_training.ipynb
src/sarioreader/: __init__.py  __main__.py  ocr.py  sario.py
src/sarioreader/models/: evaluate.py  model.py  train.py
src/sarioreader/tools/: kit.py  ocr.py  sario.py
