[tool.poetry]
name = "sarioreader"
version = "0.1.0"
description = "An AI/ML assisted tool to analyze video of industrial enviroments and recognize objects with number plates. Part of my Thesis Work."
authors = ["Chris Maikos <chmaikos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
clearvision = "^0.2.0"
ultralytics = "^8.0.184"
opencv-python = "^4.8.0.76"
numpy = ">=1.24.0"
pytesseract = "^0.3.10"
tensorflow-cpu = "^2.13.0"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cufft-cu11 = "10.9.0.58"
nvidia-curand-cu11 = "10.2.10.91"
nvidia-cusolver-cu11 = "11.4.0.1"
nvidia-cusparse-cu11 = "11.7.4.91"
nvidia-nccl-cu11 = "2.14.3"
nvidia-nvtx-cu11 = "11.7.91"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 79
target-version = ['py38']

# isort configuration
[tool.isort]
profile = "black"
